tests/compile-fail/integration__integration__type_check__diffswitch__arg.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
  ┌─ <input>:9:16
  │
9 │     int x = 3::4.5:;
  │             ---^^^-
  │             │  │
  │             │  a float
  │             same types required by this
  │             an integer


